# programmiersprachen-aufgabe-3

source/: CMakeLists.txt  aufgabe1.cpp  aufgabe11.cpp  aufgabe12.cpp  aufgabe2bis4.cpp  aufgabe5.cpp  aufgabe7bis10.cpp  aufgabe7bis9.cpp  circle.cpp  circle.hpp  clock.cpp  color.cpp  color.hpp  example.cpp  mat2.cpp  mat2.hpp  rectangle.cpp  rectangle.hpp  tests.cpp  vec2.cpp  vec2.hpp
