# Build aufgabe1
add_executable(aufgabe1
  aufgabe1.cpp
  )

# Build aufgabe2bis4
add_executable(aufgabe2bis4
  aufgabe2bis4.cpp
  )

# Build aufgabe5
add_executable(aufgabe5
  aufgabe5.cpp
  )

# Build aufgabe7bis10
add_executable(aufgabe7bis10
  aufgabe7bis10.cpp
  circle.cpp
  vec2.cpp
  mat2.cpp
  color.cpp
)

# Build aufgabe11
add_executable(aufgabe11
  aufgabe11.cpp
  circle.cpp
  vec2.cpp
  mat2.cpp
  color.cpp
  )